# lua-c-api-tutorials

./: .gitignore  CMakeLists.txt  README.md  build.sh  clear.sh
src/: 01_hello.c  CMakeLists.txt
